COF-417 Widget - order 6, plural for english

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1756,3 +1756,5 @@
 "widget_rule_3_2_medium_detail" = "اكتمل النسخ الاحتياطي.";
 "widget_display_name" = "التخزين الشخصي";
 "widget_description" = "يمكنك الاحتفاظ بذكرياتك بهاتفك بأمان من خلال تلقي الإشعارات المتعلقة بذاكرة جهازك ومساحة تخزين لايف بوكسLİFEBOX.";
+"widget_rule_6_small_detail_plural" = "اجريت اخرنسخ احتياطي لجهات الاتصال الخاصة بك قبل شهرا.احضر إلى لايف بوكس سريعا,واجعل جهات الاتصال الخاصة بك تحت الحماية.";
+"widget_rule_6_medium_detail_plural" = "لم تقم بالنسخ الاحتياطي لجهات الاتصال الخاصة بك منذ شهرا على الأقل.";
