--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -89,7 +89,7 @@
 "%ld photos" = "%ld fotos";
 "Failed" = "Ha fallado";
 "Refreshing..." = "Actualizando...";
-"Release to refresh" = "Suéltelo para actualizar";
+"Release to refresh" = "Sueltalo para actualizar";
 "My Activity Timeline" = "Cronología de actividad";
 "file(s)" = "archivo(s)";
 "My Stream" = "Álbumes inteligentes";
@@ -1759,30 +1759,32 @@
 "widget_rule_7_1_small_detail" = "¡Observa y comparte!";
 "widget_rule_7_1_small_button" = "Ver";
 "widget_rule_7_1_medium_title" = "Recuerdos con tus seres queridos agrupados en álbumes especiales";
-"widget_rule_7_1_medium_detail" = "";
-"widget_rule_7_1_medium_button" = "";
-"widget_rule_7_2_small_title" = "";
-"widget_rule_7_2_small_detail" = "";
-"widget_rule_7_2_small_button" = "";
-"widget_rule_7_2_medium_title" = "";
-"widget_rule_7_2_medium_detail" = "";
-"widget_rule_7_2_medium_button" = "";
-"widget_rule_7_3_small_detail" = "";
-"widget_rule_7_3_small_button" = "";
-"widget_rule_7_3_medium_detail" = "";
-"widget_rule_7_3_medium_button" = "";
-"widget_rule_7_4_small_detail" = "";
-"widget_rule_7_4_small_button" = "";
-"widget_rule_7_4_medium_detail" = "";
-"widget_rule_7_4_medium_button" = "";
-"billo_contactus_top_text" = "";
-"widget_rule_3_1_small_button" = "";
-"widget_rule_3_1_small_detail" = "";
-"widget_rule_3_1_medium_button" = "";
-"widget_rule_3_1_medium_detail" = "";
-"widget_rule_3_2_small_button" = "";
-"widget_rule_3_2_small_detail" = "";
-"widget_rule_3_2_medium_button" = "";
-"widget_rule_3_2_medium_detail" = "";
-"widget_display_name" = "";
-"widget_description" = "";
+"widget_rule_7_1_medium_detail" = "Miralos y comparte!";
+"widget_rule_7_1_medium_button" = "Ver álbumes de personas";
+"widget_rule_7_2_small_title" = "Más fotos significa una agrupación de rostros más fácil";
+"widget_rule_7_2_small_detail" = "Sube más!";
+"widget_rule_7_2_small_button" = "Subir";
+"widget_rule_7_2_medium_title" = "Más fotos significa agrupación de rostros más fácil";
+"widget_rule_7_2_medium_detail" = "¿Porqué no subir más fotos?";
+"widget_rule_7_2_medium_button" = "Subir fotos";
+"widget_rule_7_3_small_detail" = "Organiza fácilmente tus recuerdos con agrupación de personas";
+"widget_rule_7_3_small_button" = "Habilitar el agrupamiento";
+"widget_rule_7_3_medium_detail" = "¿Qué te parece organizar fácilmente tus recuerdos por persona o imágenes?";
+"widget_rule_7_3_medium_button" = "Habilita agrupamiento por rostro e imagen ";
+"widget_rule_7_4_small_detail" = "Agrupa tus recuerdos fácilmente por persona";
+"widget_rule_7_4_small_button" = "Échale un vistazo";
+"widget_rule_7_4_medium_detail" = "¿Qué te parece organizar fácilmente tus recuerdos por persona o imágenes?";
+"widget_rule_7_4_medium_button" = "Échale un vistazo";
+"billo_contactus_top_text" = "\"Gracias por elegirnos. Compartiremos tu solicitud con el equipo de soporte de Digicel. Digicel es el operador contratado para la aplicación de Billo. A parte de los datos personales que especifique en tu solicitud, la información del dispositivo, la información de uso de Billo y los datos de contacto también se compartirán con Digicel para realizar un análisis detallado y proporcionar una solución rápida en tu caso.\"";
+"widget_rule_3_1_small_button" = "Ver";
+"widget_rule_3_1_small_detail" = "%d/%d Archivos sincronizados...\n%@";
+"widget_rule_3_1_medium_button" = "Ver";
+"widget_rule_3_1_medium_detail" = "%d/%d Archivos sincronizados...\nSincronizado: %@";
+"widget_rule_3_2_small_button" = "Ver";
+"widget_rule_3_2_small_detail" = "Se completó la copia de seguridad.";
+"widget_rule_3_2_medium_button" = "Ver";
+"widget_rule_3_2_medium_detail" = "Se completó la copia de seguridad.";
+"widget_display_name" = "Almacenamiento Personal";
+"widget_description" = "Puedes mantener tus recuerdos y teléfono seguros recibiendo las notificaciones sobre la memoria de tu dispositivo y el espacio de almacenamiento de lifebox.";
+"widget_rule_6_small_detail_plural" = "Ha pasado un %d meses desde tu último respaldo de contactos";
+"widget_rule_6_medium_detail_plural" = "Ha pasado un %d meses desde tu último respaldo de contactos";
