--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1758,3 +1758,5 @@
 "widget_rule_3_2_medium_detail" = "Синхронизация завершена.";
 "widget_display_name" = "Личное Хранилище";
 "widget_description" = "Вы можете хранить свои воспоминания и телефон в безопасности, получая уведомления о памяти устройства и объеме памяти lifebox.";
+"widget_rule_6_small_detail_plural" = "Прошло больше месяца с момента создания последней резервной копии контактов.";
+"widget_rule_6_medium_detail_plural" = "С момента создания последней резервной копии контактов прошло больше месяца. Прямо сейчас, в lifebox, обезопасте свои контакты.";
