--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1682,67 +1682,69 @@
 "digicel_feature_cancel_TO" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
 "digicel_feature_cancel_VU" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
 "digicel_feature_cancel_PG" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
-"widget_rule_0_small_detail" = "";
-"widget_rule_0_small_button" = "";
-"widget_rule_0_medium_detail" = "";
-"widget_rule_0_medium_button" = "";
-"widget_rule_1_small_title" = "";
-"widget_rule_1_small_detail" = "";
-"widget_rule_1_small_button" = "";
-"widget_rule_1_medium_title" = "";
-"widget_rule_1_medium_detail" = "";
-"widget_rule_1_medium_button" = "";
-"widget_rule_2_small_title" = "";
-"widget_rule_2_small_detail" = "";
-"widget_rule_2_small_button" = "";
-"widget_rule_2_medium_title" = "";
-"widget_rule_2_medium_detail" = "";
-"widget_rule_2_medium_button" = "";
-"widget_rule_4_1_small_button" = "";
-"widget_rule_4_1_small_detail" = "";
-"widget_rule_4_1_medium_button" = "";
-"widget_rule_4_1_medium_detail" = "";
-"widget_rule_4_2_small_button" = "";
-"widget_rule_4_2_small_detail" = "";
-"widget_rule_4_2_medium_button" = "";
-"widget_rule_4_2_medium_detail" = "";
-"widget_rule_5_small_detail" = "";
-"widget_rule_5_small_button" = "";
-"widget_rule_5_medium_title" = "";
-"widget_rule_5_medium_detail" = "";
-"widget_rule_5_medium_button" = "";
-"widget_rule_6_small_detail" = "";
-"widget_rule_6_small_button" = "";
-"widget_rule_6_medium_detail" = "";
-"widget_rule_6_medium_button" = "";
-"widget_rule_7_1_small_title" = "";
-"widget_rule_7_1_small_detail" = "";
-"widget_rule_7_1_small_button" = "";
-"widget_rule_7_1_medium_title" = "";
-"widget_rule_7_1_medium_detail" = "";
-"widget_rule_7_1_medium_button" = "";
-"widget_rule_7_2_small_title" = "";
-"widget_rule_7_2_small_detail" = "";
-"widget_rule_7_2_small_button" = "";
-"widget_rule_7_2_medium_title" = "";
-"widget_rule_7_2_medium_detail" = "";
-"widget_rule_7_2_medium_button" = "";
-"widget_rule_7_3_small_detail" = "";
-"widget_rule_7_3_small_button" = "";
-"widget_rule_7_3_medium_detail" = "";
-"widget_rule_7_3_medium_button" = "";
-"widget_rule_7_4_small_detail" = "";
-"widget_rule_7_4_small_button" = "";
-"widget_rule_7_4_medium_detail" = "";
-"widget_rule_7_4_medium_button" = "";
-"billo_contactus_top_text" = "";
-"widget_rule_3_1_small_button" = "";
-"widget_rule_3_1_small_detail" = "";
-"widget_rule_3_1_medium_button" = "";
-"widget_rule_3_1_medium_detail" = "";
-"widget_rule_3_2_small_button" = "";
-"widget_rule_3_2_small_detail" = "";
-"widget_rule_3_2_medium_button" = "";
-"widget_rule_3_2_medium_detail" = "";
-"widget_display_name" = "";
-"widget_description" = "";
+"widget_rule_0_small_detail" = "Ви повинні увійти в систему для безперервного резервного копіювання.";
+"widget_rule_0_small_button" = "Увійти";
+"widget_rule_0_medium_detail" = "Увійдіть, щоб отримати найновіші функції резервного копіювання та lifebox.";
+"widget_rule_0_medium_button" = "Увійти";
+"widget_rule_1_small_title" = "Квота lifebox перевищує %d%%.";
+"widget_rule_1_small_detail" = "Настав час оновити верхні пакети.";
+"widget_rule_1_small_button" = "Огляд";
+"widget_rule_1_medium_title" = "Квота lifebox перевищує %d%%.";
+"widget_rule_1_medium_detail" = "Настав час оновити верхні пакети.";
+"widget_rule_1_medium_button" = "Переглянути Підписки";
+"widget_rule_2_small_title" = "Пам'ять пристрою майже заповнена.";
+"widget_rule_2_small_detail" = "Вам потрібен простір.";
+"widget_rule_2_small_button" = "Зробіть Простір";
+"widget_rule_2_medium_title" = "Пам'ять пристрою майже заповнена.";
+"widget_rule_2_medium_detail" = "Вам потрібен простір для нових спогадів.";
+"widget_rule_2_medium_button" = "Зробіть Простір";
+"widget_rule_4_1_small_button" = "Резервне Копіювання";
+"widget_rule_4_1_small_detail" = "Є файли, які очікують на резервне копіювання.";
+"widget_rule_4_1_medium_button" = "Увімкніть Автоматичне Резервне Копіювання";
+"widget_rule_4_1_medium_detail" = "Є файли, які очікують на резервне копіювання.";
+"widget_rule_4_2_small_button" = "Резервне Копіювання";
+"widget_rule_4_2_small_detail" = "Є файли, які очікують на резервне копіювання.";
+"widget_rule_4_2_medium_button" = "Запустіть Резервне Копіювання";
+"widget_rule_4_2_medium_detail" = "Є файли, які очікують на резервне копіювання.";
+"widget_rule_5_small_detail" = "Почніть безпечно створювати резервні копії своїх контактів.";
+"widget_rule_5_small_button" = "Резервне Копіювання";
+"widget_rule_5_medium_title" = "Ви ще не створили резервну копію своїх контактів.";
+"widget_rule_5_medium_detail" = "Створіть резервну копію в lifebox, захистіть свої контакти.";
+"widget_rule_5_medium_button" = "Створіть Резервну Копію Своїх Контактів";
+"widget_rule_6_small_detail" = "Ви не створили резервну копію своїх контактів принаймні 1 місяць.";
+"widget_rule_6_small_button" = "Резервне Копіювання";
+"widget_rule_6_medium_detail" = "Востаннє ви створювали резервні копії своїх контактів 1 місяць тому. Приходьте до lifebox прямо зараз, захистіть свого гіда.";
+"widget_rule_6_medium_button" = "Створіть Резервну Копію Своїх Контактів";
+"widget_rule_7_1_small_title" = "Ми створили спеціальні альбоми на основі облич на ваших фотографіях.";
+"widget_rule_7_1_small_detail" = "Перегляньте та поділіться!";
+"widget_rule_7_1_small_button" = "Переглянути";
+"widget_rule_7_1_medium_title" = "Ми згрупували його спогади за людьми та створили спеціальні альбоми.";
+"widget_rule_7_1_medium_detail" = "Відкривайте і діліться зараз!";
+"widget_rule_7_1_medium_button" = "Відкривайте Альбоми";
+"widget_rule_7_2_small_title" = "Більше фото ";
+"widget_rule_7_2_small_detail" = " забезпечує точнішу групування облич.";
+"widget_rule_7_2_small_button" = "Завантажте Фотографію";
+"widget_rule_7_2_medium_title" = "Більше фотографій забезпечують точнішу групування облич.";
+"widget_rule_7_2_medium_detail" = "Завантажити фото";
+"widget_rule_7_2_medium_button" = "Навантаження";
+"widget_rule_7_3_small_detail" = "Ви можете легко згрупувати свої спогади за особами.";
+"widget_rule_7_3_small_button" = "Відкрите Групування";
+"widget_rule_7_3_medium_detail" = "Як щодо легкої класифікації ваших спогадів за людьми та предметами?";
+"widget_rule_7_3_medium_button" = "Відкрите Групування Облич&Об’єктів";
+"widget_rule_7_4_small_detail" = "Ви можете легко згрупувати свої спогади за особами.";
+"widget_rule_7_4_small_button" = "Дізнайся";
+"widget_rule_7_4_medium_detail" = "Як щодо легкої класифікації ваших спогадів за людьми та предметами?";
+"widget_rule_7_4_medium_button" = "Дізнайся";
+"billo_contactus_top_text" = "\"Дякуємо, що вибрали нас. Ми надішлемо ваш запит команді підтримки Digicel. Digicel - це оператор, з яким ми працюємо над додатком Billo. Для детального аналізу вашого запиту та швидкого рішення, якщо у вас є персональні дані, ви також можете надати інформацію про свій пристрій, інформацію про використання Billo та контактну інформацію. Це буде передано Digicel.\"";
+"widget_rule_3_1_small_button" = "Переглянути";
+"widget_rule_3_1_small_detail" = "Резервне копіювання %d/%d файлів...\n%@";
+"widget_rule_3_1_medium_button" = "Переглянути";
+"widget_rule_3_1_medium_detail" = "Резервне копіювання %d/%d файлів...\nРезервне копіювання: %@";
+"widget_rule_3_2_small_button" = "Переглянути";
+"widget_rule_3_2_small_detail" = "Резервне копіювання завершено.";
+"widget_rule_3_2_medium_button" = "Переглянути";
+"widget_rule_3_2_medium_detail" = "Резервне копіювання завершено.";
+"widget_display_name" = "Особисте Зберігання";
+"widget_description" = "Ви можете захистити свої спогади та телефон, отримуючи сповіщення про пам’ять пристрою та простір для зберігання в lifebox.";
+"widget_rule_6_small_detail_plural" = "Ви не створили резервну копію своїх контактів принаймні 1 місяць.";
+"widget_rule_6_medium_detail_plural" = "Востаннє ви створювали резервні копії своїх контактів 1 місяць тому. Приходьте до lifebox прямо зараз, захистіть свого гіда.";
