--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1715,14 +1715,11 @@
 "widget_rule_6_small_button" = "Резервне Копіювання";
 "widget_rule_6_medium_detail" = "Востаннє ви створювали резервні копії своїх контактів 1 місяць тому. Приходьте до lifebox прямо зараз, захистіть свого гіда.";
 "widget_rule_6_medium_button" = "Створіть Резервну Копію Своїх Контактів";
-"widget_rule_7_1_small_title" = "Ми створили спеціальні альбоми на основі облич на ваших фотографіях.";
-"widget_rule_7_1_small_detail" = "Перегляньте та поділіться!";
+"widget_rule_7_1_small_detail" = "Ми згрупували ваші фотографії за обличчями.";
 "widget_rule_7_1_small_button" = "Переглянути";
-"widget_rule_7_1_medium_title" = "Ми згрупували його спогади за людьми та створили спеціальні альбоми.";
-"widget_rule_7_1_medium_detail" = "Відкривайте і діліться зараз!";
+"widget_rule_7_1_medium_detail" = "Ми згрупували його спогади за людьми та створили спеціальні альбоми.";
 "widget_rule_7_1_medium_button" = "Відкривайте Альбоми";
-"widget_rule_7_2_small_title" = "Більше фото ";
-"widget_rule_7_2_small_detail" = " забезпечує точнішу групування облич.";
+"widget_rule_7_2_small_detail" = "Більше фотографій забезпечують точнішу групування облич.";
 "widget_rule_7_2_small_button" = "Завантажте Фотографію";
 "widget_rule_7_2_medium_title" = "Більше фотографій забезпечують точнішу групування облич.";
 "widget_rule_7_2_medium_detail" = "Завантажити фото";
