--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1761,17 +1761,14 @@
 "widget_rule_6_small_button" = "Back Up";
 "widget_rule_6_medium_detail" = "It's over 1 month since your last contact backup.";
 "widget_rule_6_medium_button" = "Back Up Contacts";
-"widget_rule_7_1_small_title" = "Group your photos and find them easily!";
-"widget_rule_7_1_small_detail" = "View and share!";
+"widget_rule_7_1_small_detail" = "Got your people grouped in albums.";
 "widget_rule_7_1_small_button" = "View";
-"widget_rule_7_1_medium_title" = "Memories with your loved ones";
-"widget_rule_7_1_medium_detail" = " grouped in special albums.";
+"widget_rule_7_1_medium_detail" = "Memories with your loved ones grouped in special albums.";
 "widget_rule_7_1_medium_button" = "See People Albums";
-"widget_rule_7_2_small_title" = "More photos means easier face grouping.";
-"widget_rule_7_2_small_detail" = " Upload more!";
+"widget_rule_7_2_small_detail" = "More photos means easier face grouping.";
 "widget_rule_7_2_small_button" = "Upload";
 "widget_rule_7_2_medium_title" = "More photos means easier face grouping.";
-"widget_rule_7_2_medium_detail" = " Why not uploading more photos?";
+"widget_rule_7_2_medium_detail" = "Why not uploading more photos?";
 "widget_rule_7_2_medium_button" = "Upload Photos";
 "widget_rule_7_3_small_detail" = "Group your memories by people.";
 "widget_rule_7_3_small_button" = "Enable Grouping";
